--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,193 @@
-.App {
+/* Global */
+
+html, body {
+  height:100%;
+  width: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  color: #8DD9CC;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+}
+
+/* Header */
+header {
+  width: 100%;
+  height:100px;
+  background-color: #4A646C;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+}
+
+.menu-icon {
+  padding: 5px;
+  margin:5px;
+  width: 20%;
   text-align: center;
 }
 
-.container{
+
+h1 {
+  width: 80%;
+  text-align: center;
+}
+
+/* Side */
+nav {
+  width: 20%;
+  height: 100%;
+  padding: 15px;
+  background-color: #4A646C;
+  position: fixed;
+  top: 100px;
+  z-index: 1;
+  font-size: 0.9em;
+}
+
+.filter, .locations {
+  margin: 2px;
+  margin-bottom: 20px;
+  padding: 5px;
+}
+
+input {
+  width: 100%;
+  margin-top: 5px;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 10px;
+  font-size: 0.8em;
+  text-align: left;
+}
+
+/* Map */
+.container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   height:100%;
+  width: 100%;
 }
 
 #map {
-  height: 300px;
+  height: 100%;
+  width: 100%;
 }
+
+
+
+/*media queries*/
+@media screen and (max-width:883px){
+  .menu-icon {
+    width: 25%;
+  }
+
+  h1 {
+    width: 75%;
+    font-size: 1.8em;
+  }
+
+  nav {
+    width: 25%;
+    padding: 10px;
+  }
+
+}
+
+@media screen and (max-width:707px){
+  h1 {
+    font-size: 1.7em;
+  }
+  nav {
+    padding: 5px;
+  }
+
+}
+
+@media screen and (max-width:630px){
+  h1 {
+    font-size: 1.6em;
+  }
+
+  nav {
+    width: 27%;
+    padding: 2px;
+    font-size: 0.8em;
+  }
+}
+
+@media screen and (max-width:510px){
+  header{
+    height:75px;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  nav {
+    width: 27%;
+    padding: 2px;
+    font-size: 0.8em;
+    top:75px;
+
+  }
+}
+
+@media screen and (max-width:410px){
+  header{
+    height:60px;
+  }
+
+  .fa-bars {
+    font-size: 1.7em;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  nav {
+    width: 30%;
+    padding: 0;
+    font-size: 0.7em;
+    top:60px;
+  }
+
+  .filter, .locations {
+    padding: 4px;
+    margin-bottom: 2px;
+    text-align: center;
+  }
+
+}
+
+@media screen and (max-width:300px){
+
+  h1 {
+    font-size: 1.3em;
+  }
+
+  nav {
+    width: 35%;
+  }
+
+  .filter {
+    margin-bottom: 1px;
+  }
+}
+
+
+
