--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@ html, body {
 
 body {
   font-family: 'Montserrat', sans-serif;
-  color: white;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -16,6 +15,7 @@ body {
 
 /* Header */
 header {
+  color: white;
   width: 100%;
   height:100px;
   background-color: #4A646C;
@@ -42,6 +42,7 @@ h1 {
 
 /* Side */
 nav {
+  color: white;
   width: 20%;
   height: 100%;
   padding: 15px;
@@ -88,6 +89,13 @@ ul {
 #map {
   height: 100%;
   width: 100%;
+}
+
+.info-window {
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  color: black;
 }
 
 
