--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,13 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-
 }
 
 /* Header */
 header {
   color: white;
   width: 100%;
-  height:100px;
+  height:15%;
   background-color: #4A646C;
   display: flex;
   flex-direction: row;
@@ -49,19 +48,26 @@ nav {
   padding: 15px;
   background-color: #4A646C;
   position: fixed;
-  top: 100px;
+  top: 15%;
   z-index: 1;
   font-size: 0.9em;
+  overflow: auto;
 }
 
 .hidden {
-  display: none;
+  position:absolute;
+  left:-10000px;
 }
 
 .filter, .locations {
   margin: 2px;
-  margin-bottom: 20px;
+  margin-bottom: 7px;
   padding: 5px;
+
+}
+
+.locations h2 {
+  font-size: 1em;
 }
 
 input {
@@ -72,9 +78,24 @@ input {
 ul {
   list-style-type: none;
   padding-left: 10px;
-  font-size: 0.8em;
+  font-size: 0.9em;
   text-align: left;
+  margin-bottom: 0;
+}
+
+button {
   cursor: pointer;
+  border: none;
+  background-color: inherit;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 10px;
+  text-align: left;
+}
+
+button:focus, button:active {
+  border: none;
 }
 
 .chosen {
@@ -82,11 +103,12 @@ ul {
 }
 
 .show-all {
-
+  font-size: 1em;
 }
 
 .attribution {
   padding-left: 8px;
+  margin-bottom: 150px;
 }
 
 /* Map */
@@ -110,6 +132,10 @@ ul {
   height: 20px;
   background-color: red;
   color: black;
+}
+
+h4 {
+  margin: 0;
 }
 
 
@@ -195,6 +221,11 @@ ul {
     padding: 4px;
     margin-bottom: 2px;
     text-align: center;
+  }
+
+  .darksky {
+    width: 70px;
+    height: 30px;
   }
 
 }
