--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ header {
   justify-content: space-between;
   align-items: center;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
 }
 
 .menu-icon {
@@ -49,7 +49,7 @@ nav {
   background-color: #4A646C;
   position: fixed;
   top: 15%;
-  z-index: 1;
+  z-index: 2;
   font-size: 0.9em;
   overflow: auto;
 }
@@ -120,6 +120,7 @@ button:focus, button:active {
   left: 0;
   height:100%;
   width: 100%;
+  color: black;
 }
 
 #map {
@@ -138,6 +139,21 @@ h4 {
   margin: 0;
 }
 
+.warning {
+  background-color: #44D7A8;
+  position: absolute;
+  top: 15%;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  padding: 10px;
+  padding-top: 100px;
+  text-align: center;
+}
+
+.hidden-for-everyone {
+  display: none;
+}
 
 /*media queries*/
 @media screen and (max-width:883px){
