Add div with weather info for screen readers

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,11 @@ nav {
   left:-10000px;
 }
 
+.weatherInfo{
+  position:absolute;
+  left:-10000px;
+}
+
 .filter, .locations {
   margin: 2px;
   margin-bottom: 7px;
